# Verse

./: .clang-format  .gitmodules  BUGS  CMakeLists.txt  README.md
Data/EntityPrototypes/: Asteroid00.json  Asteroid01.json  Block2x2x2.json  Chrystal.json  Drone.json  Factory2.json  House.json  Npc.json  Player.json  Ship.json  Ship3.json  Ship_Fast.json  Target.json  list.json  singleton_list.json
Data/Levels/: AsteroidField.json  DebugAttachments.json  OneAsteroid.json  ShootingRange.json  SplitSandbox.json  VfxSandbox.json  VoxelShredderSandbox.json  WreckageSandbox.json  (+1 more)
Source/: CMakeLists.txt
Source/GameLib/: AbstractAction.h  AbstractBehaviour.h  AbstractEntityBehaviour.cpp  AbstractEntityBehaviour.h  AimHelper.cpp  AimHelper.h  Attachment.cpp  Attachment.h  BehaviourComponent.cpp  BehaviourComponent.h  BehaviourManager.cpp  BehaviourManager.h  BehaviourManager.inl  BehaviourSystem.cpp  BehaviourSystem.h  CMakeLists.txt  CollisionShapeTypes.h  ColorPalette.cpp  ColorPalette.h  Components.h  CoriolisComponent.h  CoriolisSystem.cpp  CoriolisSystem.h  DockingPoint.h  Engine.cpp  Engine.h  EngineSlot.cpp  EngineSlot.h  Equipment.cpp  Equipment.h  EquipmentSystem.cpp  EquipmentSystem.h  EquipmentUpdateContext.h  FlightControl.cpp  FlightControl.h  FlightControlBase.cpp  FlightControlBase.h  FlightControlConfig.cpp  FlightControlConfig.h  GameLib.h  (+29 more)
Source/GameLib/Debug/: DebugAttachmentSystem.cpp  DebugAttachmentSystem.h  DebugOverlay.cpp  DebugOverlay.h
Source/GameLib/Faction/: Allegiance.cpp  Allegiance.h  FactionChangeEvent.h  FactionManager.cpp  FactionManager.h
Source/GameLib/Hailstorm/: HailstormBullet.h  HailstormBullet.inl  HailstormDefines.h  HailstormManager.cpp  HailstormManager.h  HailstormParticle.h  HailstormPhysicsWorld.cpp  HailstormPhysicsWorld.h  HailstormRenderBatch.cpp  HailstormRenderBatch.h  HailstormRenderer.cpp  HailstormRenderer.h  VoxelObjectBulletHit.h
Source/GameLib/Hud/: Hud.cpp  Hud.h  HudButton.cpp  HudButton.h  HudCrosshairs.cpp  HudCrosshairs.h  HudElement.h  HudEntityMarkers.cpp  HudEntityMarkers.h  HudEntityMarkersRenderer.cpp  HudEntityMarkersRenderer.h  HudLayer.h  HudProxy.h  HudRenderer.cpp  HudRenderer.h
Source/GameLib/Npc/: FlyToTask.cpp  FlyToTask.h  NpcAttackTask.cpp  NpcAttackTask.h  NpcBehaviour.h  NpcBehaviourSystem.cpp  NpcBehaviourSystem.h  NpcController.cpp  NpcController.h  NpcControllerSystem.cpp  NpcControllerSystem.h  NpcDebugRendererSystem.cpp  NpcDebugRendererSystem.h  NpcDebugTask.cpp  NpcDebugTask.h  NpcFlightControl.cpp  NpcFlightControl.h  NpcFlightControlSystem.h  NpcSteering.cpp  NpcSteering.h  NpcTask.cpp  NpcTask.h
Source/GameLib/Player/: PlayerFlightControl.cpp  PlayerFlightControl.h  PlayerSystem.cpp  PlayerSystem.h
Source/GameLib/Resource/: AllegiancePrototype.h  BehaviourPrototype.cpp  BehaviourPrototype.h  ComponentPrototype.h  CoriolisPrototype.cpp  CoriolisPrototype.h  EntityDesc.cpp  EntityDesc.h  EntityPrototype.cpp  EntityPrototype.h  EntityPrototypeManager.cpp  EntityPrototypeManager.h  EntityPrototypeSystem.h  EquipmentPrototype.cpp  EquipmentPrototype.h  FlightControlConfigPrototype.cpp  FlightControlConfigPrototype.h  HudProxyPrototype.h  HullPrototype.h  NpcBehaviourPrototype.h  NpcControllerPrototype.cpp  NpcControllerPrototype.h  PlayerFlightControlPrototype.cpp  PlayerFlightControlPrototype.h  R.h  ResourceManager.cpp  ResourceManager.h  ResourceManager.inl  RigidBodyPrototype.cpp  RigidBodyPrototype.h  VerseEntityPrototypeManager.cpp  VerseEntityPrototypeManager.h  VerseEntityPrototypeSystem.cpp  VerseEntityPrototypeSystem.h  VersePrototypeManager.cpp  VersePrototypeManager.h  VersePrototypeSystem.cpp  VersePrototypeSystem.h  VerseResourceManager.cpp  VerseResourceManager.h  (+6 more)
Source/GameLib/Systems/: RigidBodyVoxelObjectSystem.cpp  RigidBodyVoxelObjectSystem.h  VoxelObjectSystem.cpp  VoxelObjectSystem.h
Source/GameLib/Vfx/: Emitter.cpp  Emitter.h  EmitterColorStrategy.cpp  EmitterColorStrategy.h  EmitterInstance.cpp  EmitterInstance.h  EmitterIntensityStrategy.cpp  EmitterIntensityStrategy.h  EmitterLifetimeStrategy.cpp  EmitterLifetimeStrategy.h  EmitterOrientationStrategy.cpp  EmitterOrientationStrategy.h  EmitterPlacementStrategy.cpp  EmitterPlacementStrategy.h  EmitterRotationStrategy.cpp  EmitterRotationStrategy.h  EmitterSizeStrategy.cpp  EmitterSizeStrategy.h  EmitterVelocityStrategy.cpp  EmitterVelocityStrategy.h  EngineEmitter.cpp  EngineEmitter.h  VfxComponent.h  VfxComponentPrototype.cpp  VfxComponentPrototype.h  VfxDebugRenderer.cpp  VfxDebugRenderer.h  VfxDefines.h  VfxEffect.cpp  VfxEffect.h  VfxManager.cpp  VfxManager.h  VfxMeshRenderBatch.cpp  VfxMeshRenderBatch.h  VfxMeshRenderer.cpp  VfxMeshRenderer.h  VfxParticle.cpp  VfxParticle.h  VfxParticle.inl  VfxPointLight.h  (+8 more)
Source/GameLib/Voxel/: VoxReader.cpp  VoxReader.h  Voxel.h  VoxelChunkTree.cpp  VoxelChunkTree.h  VoxelCluster.cpp  VoxelCluster.h  VoxelCluster.inl  VoxelClusterContact.cpp  VoxelClusterContact.h  VoxelClusterMarchingCubes.cpp  VoxelClusterMarchingCubes.h  VoxelClusterMarchingCubesTriangulation.cpp  VoxelClusterMarchingCubesTriangulation.h  VoxelClusterPrimitiveTest.cpp  VoxelClusterPrimitiveTest.h  VoxelClusterSegment.h  VoxelClusterShape.cpp  VoxelClusterShape.h  VoxelClusterShape.inl  VoxelClusterSplitDetector.cpp  VoxelClusterSplitDetector.h  VoxelClusterSplitSystem.cpp  VoxelClusterSplitSystem.h  VoxelDefines.h  VoxelHull.cpp  VoxelHull.h  VoxelImpactSystem.cpp  VoxelImpactSystem.h  VoxelMaterialComponent.h  VoxelMaterialPalettePrototype.cpp  VoxelMaterialPalettePrototype.h  VoxelMaterialPrototype.cpp  VoxelMaterialPrototype.h  VoxelMaterialSystem.cpp  VoxelMaterialSystem.h  VoxelMeshLoader.cpp  VoxelMeshLoader.h  VoxelModel.cpp  VoxelModel.h  (+34 more)
Source/Sandboxes/: CMakeLists.txt  HudSandbox.cpp  NpcSandbox.cpp  ResourceSandbox.cpp  ShootingRangeSandbox.cpp  VerseSandbox.cpp  VfxSandbox.cpp  VoxelObjectSandbox.cpp
Source/Sandboxes/Common/: SandboxApplication.cpp  SandboxApplication.h
Source/Tests/: CMakeLists.txt  VoxelClusterShapeTest.cpp  VoxelHullTest.cpp  VoxelShapeTreeTest.cpp
(+62 files in other folders)
