set(target GameLib)

add_library(${target}
    STATIC

    Debug/DebugOverlay.cpp
    Debug/DebugOverlay.h

    Faction/Allegiance.cpp
    Faction/Allegiance.h
    Faction/FactionManager.cpp
    Faction/FactionManager.h

    Hailstorm/HailstormBullet.h
    Hailstorm/HailstormManager.cpp
    Hailstorm/HailstormManager.h
    Hailstorm/HailstormPhysicsWorld.cpp
    Hailstorm/HailstormPhysicsWorld.h

    Hud/Hud.cpp
    Hud/Hud.h
    Hud/HudButton.cpp
    Hud/HudButton.h
    Hud/HudCrosshairs.cpp
    Hud/HudCrosshairs.h
    Hud/HudEntityMarkers.cpp
    Hud/HudEntityMarkers.h
    Hud/HudEntityMarkers.h
    Hud/HudLayer.h

    Npc/NpcAttackTask.cpp
    Npc/NpcAttackTask.h
    Npc/NpcBehaviour.cpp
    Npc/NpcBehaviour.h
    Npc/NpcBehaviourSystem.cpp
    Npc/NpcBehaviourSystem.h
    Npc/NpcControllerSystem.cpp
    Npc/NpcControllerSystem.h
    Npc/NpcSteering.cpp
    Npc/NpcSteering.h
    Npc/NpcController.cpp
    Npc/NpcController.h
    Npc/NpcDebugTask.cpp
    Npc/NpcDebugTask.h
    Npc/NpcControllerSystem.h
    Npc/NpcDebugRendererSystem.cpp
    Npc/NpcDebugRendererSystem.h
    Npc/NpcFlightControl.cpp
    Npc/NpcFlightControl.h
    Npc/NpcTask.cpp
    Npc/NpcTask.h

    Player/PlayerFlightControl.cpp
    Player/PlayerFlightControl.h
    Player/PlayerSystem.cpp
    Player/PlayerSystem.h

    Resource/AllegiancePrototype.h
    Resource/ComponentPrototype.h
    Resource/CoriolisPrototype.cpp
    Resource/CoriolisPrototype.h
    Resource/EntityPrototype.cpp
    Resource/EntityPrototype.h
    Resource/EntityPrototypeManager.cpp
    Resource/EntityPrototypeManager.h
    Resource/EquipmentPrototype.cpp
    Resource/EquipmentPrototype.h
    Resource/FlightControlConfigPrototype.cpp
    Resource/FlightControlConfigPrototype.h
    Resource/NpcBehaviourPrototype.h
    Resource/NpcControllerPrototype.cpp
    Resource/NpcControllerPrototype.h
    Resource/PlayerFlightControlPrototype.cpp
    Resource/PlayerFlightControlPrototype.h
    Resource/ResourceManager.cpp
    Resource/ResourceManager.h
    Resource/R.h
    Resource/RigidBodyPrototype.cpp
    Resource/RigidBodyPrototype.h
    Resource/VoxelObjectPrototype.cpp
    Resource/VoxelObjectPrototype.h

    Vfx/Emitter.cpp
    Vfx/Emitter.h
    Vfx/EmitterColorStrategy.cpp
    Vfx/EmitterColorStrategy.h
    Vfx/EmitterInstance.cpp
    Vfx/EmitterInstance.h
    Vfx/EmitterIntensityStrategy.cpp
    Vfx/EmitterIntensityStrategy.h
    Vfx/EmitterLifetimeStrategy.cpp
    Vfx/EmitterLifetimeStrategy.h
    Vfx/EmitterPlacementStrategy.cpp
    Vfx/EmitterPlacementStrategy.h
    Vfx/EmitterRotationStrategy.cpp
    Vfx/EmitterRotationStrategy.h
    Vfx/EmitterSizeStrategy.cpp
    Vfx/EmitterSizeStrategy.h
    Vfx/EmitterVelocityStrategy.cpp
    Vfx/EmitterVelocityStrategy.h
    Vfx/VfxDefines.h
    Vfx/VfxEffect.cpp
    Vfx/VfxEffect.h
    Vfx/VfxManager.cpp
    Vfx/VfxManager.h
    Vfx/VfxParticle.h
    Vfx/VfxParticle.inl
    Vfx/VfxRenderBatch.cpp
    Vfx/VfxRenderBatch.h
    Vfx/VfxRenderer.cpp
    Vfx/VfxRenderer.h
    Vfx/VfxSystem.cpp
    Vfx/VfxSystem.h

    Voxel/VoxelCluster.cpp
    Voxel/VoxelCluster.h
    Voxel/VoxelCluster.inl
    Voxel/VoxelClusterContact.cpp
    Voxel/VoxelClusterContact.h
    Voxel/VoxelClusterMarchingCubes.cpp
    Voxel/VoxelClusterMarchingCubes.h
    Voxel/VoxelClusterMarchingCubesTriangulation.cpp
    Voxel/VoxelClusterMarchingCubesTriangulation.h
    Voxel/VoxelClusterPrimitiveTest.cpp
    Voxel/VoxelClusterPrimitiveTest.h
    Voxel/VoxelClusterSplitDetector.cpp
    Voxel/VoxelClusterSplitDetector.h
    Voxel/VoxelClusterSplitSystem.cpp
    Voxel/VoxelClusterSplitSystem.h
    Voxel/VoxelHull.cpp
    Voxel/VoxelHull.h
    Voxel/VoxelImpactSystem.cpp
    Voxel/VoxelImpactSystem.h
    Voxel/VoxelObject.cpp
    Voxel/VoxelObject.h
    Voxel/VoxelObjectPrimitives.cpp
    Voxel/VoxelObjectPrimitives.h
    Voxel/VoxelObjectVoxelData.cpp
    Voxel/VoxelObjectVoxelData.h
    Voxel/VoxelRenderChunk.cpp
    Voxel/VoxelRenderChunk.h
    Voxel/VoxelRenderChunkTree.cpp
    Voxel/VoxelRenderChunkTree.h
    Voxel/VoxelRigidBodyPayload.cpp
    Voxel/VoxelRigidBodyPayload.h
    Voxel/VoxelShape.cpp
    Voxel/VoxelShape.h
    Voxel/VoxelWorld.cpp
    Voxel/VoxelWorld.h
    Voxel/VoxReader.cpp
    Voxel/VoxReader.h

    AimHelper.cpp
    AimHelper.h
    Components.h
    CoriolisComponent.h
    CoriolisSystem.cpp
    CoriolisSystem.h
    CollisionShapeTypes.h
    Engine.cpp
    Engine.h
    EngineSlot.cpp
    EngineSlot.h
    Equipment.cpp
    Equipment.h
    EquipmentSystem.cpp
    EquipmentSystem.h
    FlightControlConfig.cpp
    FlightControlConfig.h
    Hardpoint.cpp
    Hardpoint.h
    ItemSlot.cpp
    ItemSlot.h
    GameLib.cpp
    GameLib.h
    VerseApplication.cpp
    VerseApplication.h
    Weapon.cpp
    Weapon.h
    )

target_include_directories(${target}
    PUBLIC

    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/Debug
    ${CMAKE_CURRENT_SOURCE_DIR}/Faction
    ${CMAKE_CURRENT_SOURCE_DIR}/Hailstorm
    ${CMAKE_CURRENT_SOURCE_DIR}/Hud
    ${CMAKE_CURRENT_SOURCE_DIR}/Systems
    ${CMAKE_CURRENT_SOURCE_DIR}/Npc
    ${CMAKE_CURRENT_SOURCE_DIR}/Player
    ${CMAKE_CURRENT_SOURCE_DIR}/Resource
    ${CMAKE_CURRENT_SOURCE_DIR}/Vfx
    ${CMAKE_CURRENT_SOURCE_DIR}/Voxel

    ${DELIBERATION_INCLUDE_DIRS}
    )

target_link_libraries(${target}
    ${DELIBERATION_LIBRARIES}
    )