set(target GameLib)

add_library(${target}
    STATIC

    Debug/DebugAttachmentSystem.cpp
    Debug/DebugAttachmentSystem.h
    Debug/DebugOverlay.cpp
    Debug/DebugOverlay.h

    Faction/Allegiance.cpp
    Faction/Allegiance.h
    Faction/FactionManager.cpp
    Faction/FactionManager.h

    Hailstorm/HailstormBullet.h
    Hailstorm/HailstormManager.cpp
    Hailstorm/HailstormManager.h
    Hailstorm/HailstormPhysicsWorld.cpp
    Hailstorm/HailstormPhysicsWorld.h

    Hud/Hud.cpp
    Hud/Hud.h
    Hud/HudButton.cpp
    Hud/HudButton.h
    Hud/HudCrosshairs.cpp
    Hud/HudCrosshairs.h
    Hud/HudEntityMarkers.cpp
    Hud/HudEntityMarkers.h
    Hud/HudEntityMarkersRenderer.cpp
    Hud/HudEntityMarkersRenderer.h
    Hud/HudLayer.h
    Hud/HudRenderer.cpp
    Hud/HudRenderer.h

    Npc/NpcAttackTask.cpp
    Npc/NpcAttackTask.h
    Npc/NpcBehaviour.cpp
    Npc/NpcBehaviour.h
    Npc/NpcBehaviourSystem.cpp
    Npc/NpcBehaviourSystem.h
    Npc/NpcControllerSystem.cpp
    Npc/NpcControllerSystem.h
    Npc/NpcSteering.cpp
    Npc/NpcSteering.h
    Npc/NpcController.cpp
    Npc/NpcController.h
    Npc/NpcDebugTask.cpp
    Npc/NpcDebugTask.h
    Npc/NpcControllerSystem.h
    Npc/NpcDebugRendererSystem.cpp
    Npc/NpcDebugRendererSystem.h
    Npc/NpcFlightControl.cpp
    Npc/NpcFlightControl.h
    Npc/NpcTask.cpp
    Npc/NpcTask.h

    Player/PlayerFlightControl.cpp
    Player/PlayerFlightControl.h
    Player/PlayerSystem.cpp
    Player/PlayerSystem.h

    Resource/AllegiancePrototype.h
    Resource/BehaviourPrototype.cpp
    Resource/BehaviourPrototype.h
    Resource/CoriolisPrototype.h
    Resource/VerseEntityPrototypeSystem.h
    Resource/EquipmentPrototype.cpp
    Resource/EquipmentPrototype.h
    Resource/FlightControlConfigPrototype.cpp
    Resource/FlightControlConfigPrototype.h
    Resource/NpcBehaviourPrototype.h
    Resource/NpcControllerPrototype.cpp
    Resource/NpcControllerPrototype.h
    Resource/PlayerFlightControlPrototype.cpp
    Resource/PlayerFlightControlPrototype.h
    Resource/ResourceManager.cpp
    Resource/ResourceManager.h
    Resource/ResourceManager.inl
    Resource/R.h
    Resource/VerseEntityPrototypeSystem.cpp
    Resource/VerseEntityPrototypeSystem.h
    Resource/VerseResourceManager.cpp
    Resource/VerseResourceManager.h
    Resource/VoxelMaterialComponentPrototype.cpp
    Resource/VoxelMaterialComponentPrototype.h
    Resource/VoxelRigidBodyPrototype.cpp
    Resource/VoxelRigidBodyPrototype.h
    Resource/VoxelObjectPrototype.cpp
    Resource/VoxelObjectPrototype.h

    Vfx/VfxDebugRenderer.cpp
    Vfx/VfxDebugRenderer.h
    Vfx/Emitter.cpp
    Vfx/Emitter.h
    Vfx/EmitterColorStrategy.cpp
    Vfx/EmitterColorStrategy.h
    Vfx/EmitterInstance.cpp
    Vfx/EmitterInstance.h
    Vfx/EmitterIntensityStrategy.cpp
    Vfx/EmitterIntensityStrategy.h
    Vfx/EmitterLifetimeStrategy.cpp
    Vfx/EmitterLifetimeStrategy.h
    Vfx/EmitterPlacementStrategy.cpp
    Vfx/EmitterPlacementStrategy.h
    Vfx/EmitterOrientationStrategy.cpp
    Vfx/EmitterOrientationStrategy.h
    Vfx/EmitterRotationStrategy.cpp
    Vfx/EmitterRotationStrategy.h
    Vfx/EmitterSizeStrategy.cpp
    Vfx/EmitterSizeStrategy.h
    Vfx/EmitterVelocityStrategy.cpp
    Vfx/EmitterVelocityStrategy.h
    Vfx/VfxComponent.h
    Vfx/VfxComponentPrototype.cpp
    Vfx/VfxComponentPrototype.h
    Vfx/VfxDefines.h
    Vfx/VfxEffect.cpp
    Vfx/VfxEffect.h
    Vfx/VfxManager.cpp
    Vfx/VfxManager.h
    Vfx/VfxPointLight.h
    Vfx/VfxPointLightManager.cpp
    Vfx/VfxPointLightManager.h
    Vfx/VfxParticle.cpp
    Vfx/VfxParticle.h
    Vfx/VfxParticle.inl
    Vfx/VfxMeshRenderBatch.cpp
    Vfx/VfxMeshRenderBatch.h
    Vfx/VfxMeshRenderer.cpp
    Vfx/VfxMeshRenderer.h
    Vfx/VfxSystem.cpp
    Vfx/VfxSystem.h

    Voxel/VoxelCluster.cpp
    Voxel/VoxelCluster.h
    Voxel/VoxelCluster.inl
    Voxel/VoxelClusterMarchingCubes.cpp
    Voxel/VoxelClusterMarchingCubes.h
    Voxel/VoxelClusterMarchingCubesTriangulation.cpp
    Voxel/VoxelClusterMarchingCubesTriangulation.h
    Voxel/VoxelClusterPrimitiveTest.cpp
    Voxel/VoxelClusterPrimitiveTest.h
    Voxel/VoxelClusterSplitDetector.cpp
    Voxel/VoxelClusterSplitDetector.h
    Voxel/VoxelClusterSplitSystem.cpp
    Voxel/VoxelClusterSplitSystem.h
    Voxel/VoxelHull.cpp
    Voxel/VoxelHull.h
    Voxel/VoxelImpactSystem.cpp
    Voxel/VoxelImpactSystem.h
    Voxel/VoxelMaterialComponent.cpp
    Voxel/VoxelMaterialComponent.h
    Voxel/VoxelMaterialPalettePrototype.cpp
    Voxel/VoxelMaterialPalettePrototype.h
    Voxel/VoxelMaterialPrototype.cpp
    Voxel/VoxelMaterialPrototype.h
    Voxel/VoxelMaterialSystem.cpp
    Voxel/VoxelMaterialSystem.h
    Voxel/VoxelMeshLoader.cpp
    Voxel/VoxelMeshLoader.h
    Voxel/VoxelPhysicsSystem.cpp
    Voxel/VoxelPhysicsSystem.h
    Voxel/VoxelObject.cpp
    Voxel/VoxelObject.h
    Voxel/VoxelObjectPrimitives.cpp
    Voxel/VoxelObjectPrimitives.h
    Voxel/VoxelObjectVoxelData.cpp
    Voxel/VoxelObjectVoxelData.h
    Voxel/VoxelRenderer.cpp
    Voxel/VoxelRenderer.h
    Voxel/VoxelRenderChunk.cpp
    Voxel/VoxelRenderChunk.h
    Voxel/VoxelRenderable.cpp
    Voxel/VoxelRenderable.h
    Voxel/VoxelRigidBodyPayload.cpp
    Voxel/VoxelRigidBodyPayload.h
    Voxel/VoxelShape.cpp
    Voxel/VoxelShape.h
    Voxel/VoxelShredder.cpp
    Voxel/VoxelShredder.h
    Voxel/VoxelShredderSandbox.cpp
    Voxel/VoxelShredderSandbox.h
    Voxel/VoxelWorld.cpp
    Voxel/VoxelWorld.h
    Voxel/VoxReader.cpp
    Voxel/VoxReader.h

    AbstractEntityBehaviour.cpp
    AbstractEntityBehaviour.h
    AbstractBehaviour.h
    AimHelper.cpp
    AimHelper.h
    BehaviourComponent.cpp
    BehaviourComponent.h
    BehaviourManager.cpp
    BehaviourManager.h
    BehaviourManager.inl
    BehaviourSystem.cpp
    BehaviourSystem.h
    ColorPalette.cpp
    ColorPalette.h
    Components.h
    CoriolisComponent.h
    CoriolisSystem.cpp
    CoriolisSystem.h
    CollisionShapeTypes.h
    DockingPoint.cpp
    DockingPoint.h
    Engine.cpp
    Engine.h
    EngineSlot.cpp
    EngineSlot.h
    Equipment.cpp
    Equipment.h
    EquipmentSystem.cpp
    EquipmentSystem.h
    FlightControlConfig.cpp
    FlightControlConfig.h
    Hardpoint.cpp
    Hardpoint.h
    HullSystem.cpp
    HullSystem.h
    Attachment.cpp
    Attachment.h
    GameLib.cpp
    GameLib.h
    LaunchDefenseBehaviour.cpp
    LaunchDefenseBehaviour.h
    VerseApplication.cpp
    VerseApplication.h
    VerseRenderManager.cpp
    VerseRenderManager.h
    VoxelLight.cpp
    VoxelLight.h
    Weapon.cpp
    Weapon.h
    WeaponPrototype.cpp
    WeaponPrototype.h
    VersePrototypeSystem.cpp
    VersePrototypeSystem.h)

target_include_directories(${target}
    PUBLIC

    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/Debug
    ${CMAKE_CURRENT_SOURCE_DIR}/Faction
    ${CMAKE_CURRENT_SOURCE_DIR}/Hailstorm
    ${CMAKE_CURRENT_SOURCE_DIR}/Hud
    ${CMAKE_CURRENT_SOURCE_DIR}/Systems
    ${CMAKE_CURRENT_SOURCE_DIR}/Npc
    ${CMAKE_CURRENT_SOURCE_DIR}/Player
    ${CMAKE_CURRENT_SOURCE_DIR}/Resource
    ${CMAKE_CURRENT_SOURCE_DIR}/Vfx
    ${CMAKE_CURRENT_SOURCE_DIR}/Voxel
    )

target_link_libraries(${target}
    Deliberation
    )